# rusty-mcp-scaffold

./: .gitignore  CONNECTION_GUIDE.md  Cargo.toml  LICENSE  README.md  build.rs  test_server.bat
src/: main.rs  server.rs
