[package]
name = "rusty-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "json"] }
tracing-appender = "0.2"
schemars = "0.8"
chrono = "0.4"

[[bin]]
name = "rusty-server"
path = "src/main.rs"
